mail template updte

--- a/mailtemplates/verificationMailTemplate.hbs
+++ b/mailtemplates/verificationMailTemplate.hbs
@@ -29,9 +29,10 @@
 
                     <img alt="MYV" src="{{images.logo}}"
                         style="border:none;display:block;outline:none;text-decoration:none;height:auto;font-size:13px;"
-                        title="" width="200" height="auto">
+                        title="" width="100" height="auto">
 
-
+                       <span style="font-size:30px;font-weight:bold">MAKE YOUR </span>
+                       <span style="font-size:30px;font-weight:bold;color:red">VIEWS</span>
 
                 </td>
             </tr>
