--- a/mailtemplates/verificationMailTemplate.hbs
+++ b/mailtemplates/verificationMailTemplate.hbs
@@ -47,14 +47,14 @@
                 <td align="center">
                     <div
                         style="text-align:center;width:50%;background-color:white;padding:20px 25px 20px 25px;word-break:break-word;border-radius:10px">
-                        <img alt="Animeta mail" src="{{images.mailIcon}}"
+                        <img alt="Animeta mail" src="{{images.passwordIcon}}"
                             style="border:none;outline:none;text-decoration:none;height:auto;font-size:13px;" title=""
                             width="100" height="auto">
                         <p style="text-align:center;font-weight: 700;">Dear <b>{{name}}</b></p>
                         <p style="text-align:center;font-weight: 400;">We're absolutely thrilled to welcome you aboard!
                         </p>
-                        <p style="text-align:center;font-weight: 400;">Congratulations on signing up with MY views</p>
-                        <p style="text-align:center;font-weight: 400;">OTP - {{OTP}}</p>
+                        <p style="text-align:center;font-weight: 400;">Thanks for using MY views</p>
+                        <p style="text-align:center;font-weight: 400;">Your OTP - {{OTP}}. Please do not share.</p>
                     </div>
 
 
