git push mail updated

--- a/mailtemplates/verificationMailTemplate.hbs
+++ b/mailtemplates/verificationMailTemplate.hbs
@@ -47,7 +47,7 @@
                 <td align="center">
                     <div
                         style="text-align:center;width:50%;background-color:white;padding:20px 25px 20px 25px;word-break:break-word;border-radius:10px">
-                        <img alt="Animeta mail" src="{{images.passwordIcon}}"
+                        <img alt="MYV mail" src="{{images.passwordIcon}}"
                             style="border:none;outline:none;text-decoration:none;height:auto;font-size:13px;" title=""
                             width="100" height="auto">
                         <p style="text-align:center;font-weight: 700;">Dear <b>{{name}}</b></p>
