--- a/mailtemplates/forgotPasswordMailTemplate.hbs
+++ b/mailtemplates/forgotPasswordMailTemplate.hbs
@@ -26,7 +26,7 @@
                 <td align="center"
                     style="font-size:0px;padding:10px 25px 10px 25px;padding-right:25px;padding-left:25px;word-break:break-word;margin: 30px 0;">
 
-                    <img alt="Animeta" src="{{images.logo}}"
+                    <img alt="MYV" src="{{images.logo}}"
                         style="border:none;display:block;outline:none;text-decoration:none;height:auto;font-size:13px;"
                         title="" width="200" height="auto">
                 </td>
@@ -53,12 +53,12 @@
                 <td align="center">
                     <div
                         style="text-align:center;width:50%;background-color:white;padding:20px 25px 20px 25px;word-break:break-word;border-radius:10px">
-                        <img alt="Animeta mail" src="{{images.lockIcon}}"
+                        <img alt="MYV mail" src="{{images.lockIcon}}"
                             style="border:none;outline:none;text-decoration:none;height:auto;font-size:13px;" title=""
                             width="100" height="auto">
 
                         <p style="text-align:center;font-family: 'roboto';">We have recently received a request for a
-                            forgotten password. To reset your Animeta Brandstar password, please follow the link below.
+                            forgotten password. To reset your MYV  password, please follow the link below.
                         </p>
                         <p style="text-align:center;margin-top:50px;margin-bottom:50px"><a
                                 href="https://{{forgotPasswordLink}}"
@@ -93,7 +93,7 @@
             <tr>
                 <td align="center"
                     style="padding:10px 25px 10px 25px;padding-right:25px;padding-left:25px;word-break:break-word;font-weight: 700;">
-                    Animeta
+                    MYV
 
                 </td>
             </tr>
